--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.68.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.10.1",
+    "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.26.4",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
   },
